--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
-
 <body>
     <header class="container header-co">
         <div class="header-bar flex item-center justify-between m-t-64  p-b-20">
-            <p class="text-default">Fyrre Magazine</p>
+            <a class="text-default" href="index.html">Fyrre Magazine</a>
             <nav>
                 <ul class=" nav-bar text-medium flex item-center justify-between  ">
-                    <li><a href="#">Magazine</a></li>
-                    <li><a href="#">Authors</a></li>
-                    <li><a href="#">Podcast</a></li>
+                    <li><a href="magazine.html">Magazine</a></li>
+                    <li><a href="authors.html">Authors</a></li>
+                    <li><a href="podcast.html">Podcast</a></li>
                     <li>
                         <img src="img/h-line.svg" class="m-b-8">
                     </li>
@@ -55,6 +54,9 @@
                     </div>
                     <div class="banner-item">
                         <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-secondary-text">Lorem ipsum dolor sit amet +++</p>
                     </div>
                     <div class="banner-item">
                         <p class="banner-secondary-text">Lorem ipsum dolor sit amet +++</p>
@@ -388,7 +390,7 @@
                 </div>
             </aside>
         </div>
-        <a href="article.html" class="flex item-center next-page text-default1"> all articles <i
+        <a href="magazine.html" class="flex item-center next-page text-default1"> all articles <i
                 class="fa-solid fa-arrow-right"></i></a>
     </section>
     <section class=" container">
@@ -506,11 +508,243 @@
                 <a href="article.html" class="flex item-center next-page text-default1"> All Authors <i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
-            <div class="">
-        
+            <div class="author-list-cont">
+                <a class="author-list-item" href="#">
+                    <div class="author-item">
+                        <div class="author-img">
+                            <img src="img/Jakob Grønberg.jpg " class="ratio-img">
+                        </div>
+                        <div class="author-text">
+                            <p class="card-article-headline"> Jakob Grønberg</p>
+                            <div class="details ">
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">Job </span>
+                                    <span class="detail-regular-text">Artist</span>
+                                </div>
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">City </span>
+                                    <span class="detail-regular-text">Berlin</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="author-list-item" href="#">
+                    <div class="author-item">
+                        <div class="author-img">
+                            <img src="img/Louise Jensen.jpg " class="ratio-img">
+                        </div>
+                        <div class="author-text">
+                            <p class="card-article-headline"> Louise Jensen</p>
+                            <div class="details ">
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">Job </span>
+                                    <span class="detail-regular-text">Photograp</span>
+                                </div>
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">City </span>
+                                    <span class="detail-regular-text">Stockholm</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="author-list-item" href="#">
+                    <div class="author-item">
+                        <div class="author-img">
+                            <img src="img/Anne Henry.jpg " class="ratio-img">
+                        </div>
+                        <div class="author-text">
+                            <p class="card-article-headline">Anne Henry</p>
+                            <div class="details ">
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">Job </span>
+                                    <span class="detail-regular-text">Photograph</span>
+                                </div>
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">City </span>
+                                    <span class="detail-regular-text">New York</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="author-list-item" href="#">
+                    <div class="author-item">
+                        <div class="author-img">
+                            <img src="img/Anna Nielsen.jpg " class="ratio-img">
+                        </div>
+                        <div class="author-text">
+                            <p class="card-article-headline">Anna Nielsen</p>
+                            <div class="details ">
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">Job </span>
+                                    <span class="detail-regular-text">Columnists</span>
+                                </div>
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">City </span>
+                                    <span class="detail-regular-text">Copenhagen</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="author-list-item" href="#">
+                    <div class="author-item">
+                        <div class="author-img">
+                            <img src="img/Jane Cooper.jpg " class="ratio-img">
+                        </div>
+                        <div class="author-text">
+                            <p class="card-article-headline">Jane Cooper</p>
+                            <div class="details ">
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">Job </span>
+                                    <span class="detail-regular-text">Artist</span>
+                                </div>
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">City </span>
+                                    <span class="detail-regular-text">Berlin</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="author-list-item" href="#">
+                    <div class="author-item">
+                        <div class="author-img">
+                            <img src="img/Cristofer Vaccaro.jpg " class="ratio-img">
+                        </div>
+                        <div class="author-text">
+                            <p class="card-article-headline">Cristofer Vaccaro</p>
+                            <div class="details ">
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">Job </span>
+                                    <span class="detail-regular-text">Artist</span>
+                                </div>
+                                <div class=" meta-item ">
+                                    <span class="detail-bold-text">City </span>
+                                    <span class="detail-regular-text">Lisbon</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
+    <footer class="footer-banner">
+        <div class="banner">
+            <div class="banner-container">
+                <div class="banner-track p-v-20 flex">
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                    <div class="banner-item">
+                        <p class="banner-text">News Ticker+++</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-content container">
+            <div class="footer-section">
+                <p>Design News to your inbox</p>
+                <div class="footer-signup-form">
+                    <form class="footer-signup-row">
+                        <input type="email" id="email" name="email" placeholder="Email">
+                        <button class="footer-btn">Sign up</button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer-container">
+
+                <div class="footer-links">
+
+                    <div class="footer-logo">
+                        <p class="text-default">Fyrre Magazine</p>
+                    </div>
+
+                    <div class="footer-row">
+                        <div class="footer-col heading-pharagrap">
+                            <a href="#">Art</a>
+                            <a href="#">Design</a>
+                            <a href="#">Architecture</a>
+                        </div>
+                        <div class="footer-col heading-pharagrap">
+                            <a href="#">Magazine</a>
+                            <a href="#">Podcast</a>
+                            <a href="#">Authors</a>
+                        </div>
+                        <div class="footer-col heading-pharagrap">
+                            <a href="#">Styleguide</a>
+                            <a href="#">Licensing</a>
+                            <a href="#">Changelog</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="footer-copyright ">
+                    <p>© Made by Pawel Gola - Powered by Webflow</p>
+
+                    <div class=" flex item-center social-icons-footer">
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://x.com/" target="_blank"><i class="fa-solid fa-wifi"></i></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
