--- a/article-detail.html
+++ b/article-detail.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="article-details flex item-center justify-between">
-            <div class="details flex item-center">
+            <div class="details flex item-center auth-det">
                 <div class="flex meta-item item-center ">
                     <span class="detail-bold-text">Text </span>
                     <span class="detail-regular-text">Jakob Gronberg</span>
@@ -74,12 +74,12 @@
             </div>
             <a class="btn-primary ">Label</a>
         </div>
-        <div class="m-t-48">
-            <img src="img/cover2.jpg">
+        <div class="m-t-48 article-cover">
+            <img src="img/cover2.jpg" class="ratio-img">
         </div>
     </section>
     <article class="container2 detail-article flex ">
-        <aside class="article-aside-cont">
+        <div class="article-aside-cont">
             <a class="author-info flex item-center p-b-32">
                 <div class="author-img">
                     <img src="img/Jakob Grønberg.jpg" class="ratio-img" alt="Author">
@@ -109,7 +109,7 @@
                 </div>
 
             </div>
-        </aside>
+        </div>
         <div class="magazine-article-content flex flex-col">
             <div class="article-paragraph">
                 <p class="text-medium">
@@ -206,7 +206,7 @@
                             </p>
                         </div>
 
-                        <div class="details">
+                        <div class="details pod-det">
                             <div class="meta-item">
                                 <span class="detail-bold-text">Text </span>
                                 <span class="detail-regular-text">Jakob Gronberg</span>
@@ -240,7 +240,7 @@
                             </p>
                         </div>
 
-                        <div class="details">
+                        <div class="details pod-det">
                             <div class="meta-item">
                                 <span class="detail-bold-text">Text </span>
                                 <span class="detail-regular-text">Jakob Gronberg</span>
@@ -274,7 +274,7 @@
                             </p>
                         </div>
 
-                        <div class="details">
+                        <div class="details pod-det">
                             <div class="meta-item">
                                 <span class="detail-bold-text">Text </span>
                                 <span class="detail-regular-text">Jakob Gronberg</span>
