--- a/authors-detail.html
+++ b/authors-detail.html
@@ -10,7 +10,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
-
 <body>
     <header class="container header-co">
         <div class="header-bar flex item-center justify-between m-t-64  p-b-20">
@@ -20,13 +19,10 @@
                     <li><a href="magazine.html">Magazine</a></li>
                     <li><a href="authors.html">Authors</a></li>
                     <li><a href="podcast.html">Podcast</a></li>
-                    <li>
-                        <img src="img/h-line.svg" class="m-b-8">
-                    </li>
+                    <li><img src="img/h-line.svg" class="m-b-8"></li>
                     <li>
                         <div class="social-icons flex item-center ">
-                            <a href="https://www.instagram.com/" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                             <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                             <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                             <a href="https://x.com/" target="_blank"><i class="fa-solid fa-wifi"></i></a>
@@ -43,7 +39,7 @@
             <a href="#" class="detail-page-header">Author</a>
         </div>
         <article class="container3 detail-article flex  p-t-96 podcast-gap">
-            <aside class="author-aside-cont">
+            <div class="author-aside-cont">
                 <div class="author-detail-img">
                     <img src="img/Luiss-Jensen-1.jpg" class="ratio-img" alt="Author">
                 </div>
@@ -57,7 +53,7 @@
                                 class="fa-brands fa-youtube text-20-bold"></i></a>
                     </div>
                 </div>
-            </aside>
+            </div>
             <div class="magazine-article-content flex flex-col">
                 <div class="article-header flex flex-col">
                     <h1 class="article-headline">
@@ -96,9 +92,8 @@
                 <div class="author-make-img">
                     <img src="img/magazin-pic-3.jpg" class="ratio-img">
                 </div>
-
                 <div class="author-make-text flex flex-col">
-                    <div class="card-article-headline">The best art museums</div>
+                    <h1 class="card-article-headline">The best art museums</h1>
                     <div class="details">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
@@ -115,9 +110,8 @@
                 <div class="author-make-img">
                     <img src="img/magazin-pic-5.jpg" class="ratio-img">
                 </div>
-
                 <div class="author-make-text flex flex-col">
-                    <div class="card-article-headline">An inde­struc­tible hope</div>
+                    <h1 class="card-article-headline">An inde­struc­tible hope</h1>
                     <div class="details">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
@@ -134,9 +128,8 @@
                 <div class="author-make-img">
                     <img src="img/magazin-pic-7.jpg" class="ratio-img">
                 </div>
-
                 <div class="author-make-text flex flex-col">
-                    <div class="card-article-headline">The chains of our lives</div>
+                    <h1 class="card-article-headline">The chains of our lives</h1>
                     <div class="details">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
@@ -155,7 +148,7 @@
                 </div>
 
                 <div class="author-make-text flex flex-col">
-                    <div class="card-article-headline">Keep on smiling</div>
+                    <h1 class="card-article-headline">Keep on smiling</h1>
                     <div class="details">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
@@ -168,11 +161,6 @@
                     </div>
                 </div>
             </a>
-
-
-
-
-
         </div>
     </section>
     <footer class="footer-banner">
