--- a/podcast-detail.html
+++ b/podcast-detail.html
@@ -36,13 +36,13 @@
             </nav>
         </div>
     </header>
-    <section class="magazine-detail-body container  p-t-32 p-b-96">
+    <section class="magazine-detail-body container  p-t-32">
         <div class="pocast-header flex item-center">
             <a href="podcast.html" class="flex item-center next-page text-default1"> <i
                     class="fa-solid fa-arrow-left"></i>Go back</a>
             <a href="#" class="detail-page-header">podcast</a>
         </div>
-        <article class="container3 detail-article flex  p-v-96 podcast-gap">
+        <article class="container3 detail-article flex  p-t-96 podcast-gap">
             <aside class="article-aside-cont">
                 <a class="podcast-info flex item-center p-b-32 flex-col">
                     <div class="img-cont">
@@ -185,7 +185,7 @@
         <div class=" p-t-48 ">
             <div class="pocast-header flex item-center">
                 <a href="#" class="heading-larg-text">Latest Posts</a>
-                <a href="podcast.html" class="flex item-center next-page text-default1">See all <i
+                <a href="podcast.html" class="flex item-center next-page text-default1">all Episodes <i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="podcast-list m-t-96">
@@ -193,13 +193,13 @@
                     <div class="list-item ">
                         <div class="img-cont">
                             <div class="podcast-img">
-                                <img src="img/podcast-poster-1.jpg">
+                                <img src="img/podcast-poster-1.jpg" class="ratio-img">
                             </div>
                             <div class="podcast-text flex flex-col absolute">
                                 <p class="poster-header1">Fyrre</p>
                                 <p class="poster-subtitle1">magazin</p>
                             </div>
-                            <div class=" pod-cont absolute flex">
+                            <div class=" pod-cont absolute flex  p-h-36 p-b-36">
                                 <div class="flex pod-subtitle">
                                     <span class="poster-subtitle1">Ep </span>
                                     <span class=" poster-subtitle1">05</span>
@@ -209,7 +209,7 @@
                         </div>
                         <div class="podcast-detail card-article-headline">
                             <p>The Problem of today’s cultural development</p>
-                            <div class="details ">
+                            <div class="details pod-det ">
                                 <div class=" meta-item ">
                                     <span class="detail-bold-text">Date </span>
                                     <span class="detail-regular-text">16. March 2022</span>
@@ -226,13 +226,13 @@
                     <div class="list-item ">
                         <div class="img-cont">
                             <div class="podcast-img">
-                                <img src="img/podcast-poster-2.jpg">
+                                <img src="img/podcast-poster-2.jpg" class="ratio-img">
                             </div>
                             <div class="podcast-text flex flex-col absolute">
                                 <p class="poster-header1">Fyrre</p>
                                 <p class="poster-subtitle1">magazin</p>
                             </div>
-                            <div class=" pod-cont absolute flex">
+                            <div class=" pod-cont absolute flex  p-h-36 p-b-36">
                                 <div class="flex pod-subtitle">
                                     <span class="poster-subtitle1">Ep </span>
                                     <span class=" poster-subtitle1">05</span>
@@ -242,7 +242,7 @@
                         </div>
                         <div class="podcast-detail card-article-headline">
                             <p>The hidden messages of Jack Nielson</p>
-                            <div class="details ">
+                            <div class="details pod-det">
                                 <div class=" meta-item ">
                                     <span class="detail-bold-text">Date </span>
                                     <span class="detail-regular-text">16. March 2022</span>
@@ -259,13 +259,13 @@
                     <div class="list-item ">
                         <div class="img-cont">
                             <div class="podcast-img">
-                                <img src="img/podcast-poster-3.jpg">
+                                <img src="img/podcast-poster-3.jpg" class="ratio-img">
                             </div>
                             <div class="podcast-text flex flex-col absolute">
                                 <p class="poster-header1">Fyrre</p>
                                 <p class="poster-subtitle1">magazin</p>
                             </div>
-                            <div class=" pod-cont absolute flex">
+                            <div class=" pod-cont absolute flex  p-h-36 p-b-36">
                                 <div class="flex pod-subtitle">
                                     <span class="poster-subtitle1">Ep </span>
                                     <span class=" poster-subtitle1">05</span>
@@ -275,7 +275,7 @@
                         </div>
                         <div class="podcast-detail card-article-headline">
                             <p>The Problem of today’s cultural development</p>
-                            <div class="details ">
+                            <div class="details pod-det">
                                 <div class=" meta-item ">
                                     <span class="detail-bold-text">Date </span>
                                     <span class="detail-regular-text">16. March 2022</span>
@@ -291,7 +291,6 @@
             </div>
         </div>
         </div>
-
     </section>
     <footer class="footer-banner">
         <div class="banner">
@@ -365,13 +364,10 @@
                 </div>
             </div>
             <div class="footer-container">
-
                 <div class="footer-links">
-
                     <div class="footer-logo">
                         <p class="text-default">Fyrre Magazine</p>
                     </div>
-
                     <div class="footer-row">
                         <div class="footer-col heading-pharagrap">
                             <a href="#">Art</a>
@@ -389,12 +385,9 @@
                             <a href="#">Changelog</a>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="footer-copyright ">
                     <p>© Made by Pawel Gola - Powered by Webflow</p>
-
                     <div class=" flex item-center social-icons-footer">
                         <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
