--- a/magazine.html
+++ b/magazine.html
@@ -70,7 +70,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -102,7 +102,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -134,7 +134,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -158,7 +158,7 @@
 
                 <div class="magazin-text flex flex-col ">
                     <div class="magazin-text-detail">
-                        <p class="title card-article-headline ">The devil is the details</p>
+                        <p class="title card-article-headline ">The devil is the details pod-det</p>
                         <p class="description heading-pharagrap2">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Egestas dui id ornare arcu odio ut sem. Cras ornare arcu dui
@@ -166,7 +166,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -198,7 +198,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -230,7 +230,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -262,7 +262,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -294,7 +294,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -326,7 +326,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -358,7 +358,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -390,7 +390,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -422,7 +422,7 @@
                         </p>
                     </div>
 
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -439,11 +439,9 @@
                     <p class="add-date detail-regular-text">16. March 2022</p>
                     <span class="btn-primary"> streeet art</span>
                 </div>
-
                 <div class="magazin-picture">
                     <img src="img/magazin-pic-13.jpg" alt="Magazine Image" class="ratio-img">
                 </div>
-
                 <div class="magazin-text flex flex-col ">
                     <div class="magazin-text-detail">
                         <p class="title card-article-headline ">Keep on Smiling </p>
@@ -453,8 +451,7 @@
                             vivamus arcu felis bibendum ut. Porttitor leo a diam.
                         </p>
                     </div>
-
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -471,11 +468,9 @@
                     <p class="add-date detail-regular-text">16. March 2022</p>
                     <span class="btn-primary"> art</span>
                 </div>
-
                 <div class="magazin-picture">
                     <img src="img/magazin-pic-14.jpg" alt="Magazine Image" class="ratio-img">
                 </div>
-
                 <div class="magazin-text flex flex-col ">
                     <div class="magazin-text-detail">
                         <p class="title card-article-headline ">History of Paper </p>
@@ -485,8 +480,7 @@
                             vivamus arcu felis bibendum ut. Porttitor leo a diam.
                         </p>
                     </div>
-
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -503,11 +497,9 @@
                     <p class="add-date detail-regular-text">16. March 2022</p>
                     <span class="btn-primary"> squlptures</span>
                 </div>
-
                 <div class="magazin-picture">
                     <img src="img/magazin-pic-15.jpg" alt="Magazine Image" class="ratio-img">
                 </div>
-
                 <div class="magazin-text flex flex-col ">
                     <div class="magazin-text-detail">
                         <p class="title card-article-headline ">How are you, really? </p>
@@ -517,8 +509,7 @@
                             vivamus arcu felis bibendum ut. Porttitor leo a diam.
                         </p>
                     </div>
-
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -535,11 +526,9 @@
                     <p class="add-date detail-regular-text">16. March 2022</p>
                     <span class="btn-primary"> art</span>
                 </div>
-
                 <div class="magazin-picture">
                     <img src="img/magazin-pic-16.jpg" alt="Magazine Image" class="ratio-img">
                 </div>
-
                 <div class="magazin-text flex flex-col ">
                     <div class="magazin-text-detail">
                         <p class="title card-article-headline ">Beauty of Colors </p>
@@ -549,8 +538,7 @@
                             vivamus arcu felis bibendum ut. Porttitor leo a diam.
                         </p>
                     </div>
-
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -567,7 +555,6 @@
                     <p class="add-date detail-regular-text">16. March 2022</p>
                     <span class="btn-primary"> art</span>
                 </div>
-
                 <div class="magazin-picture">
                     <img src="img/magazin-pic-17.jpg" alt="Magazine Image" class="ratio-img">
                 </div>
@@ -580,7 +567,7 @@
                             vivamus arcu felis bibendum ut. Porttitor leo a diam.
                         </p>
                     </div>
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -609,7 +596,7 @@
                             vivamus arcu felis bibendum ut. Porttitor leo a diam.
                         </p>
                     </div>
-                    <div class="details">
+                    <div class="details pod-det">
                         <div class="meta-item">
                             <span class="detail-bold-text">Text </span>
                             <span class="detail-regular-text">Jakob Gronberg</span>
@@ -627,7 +614,7 @@
                     class="fa-solid fa-arrow-right"></i></a>
         </div>
     </section>
-  <footer class="footer-banner">
+    <footer class="footer-banner">
         <div class="banner">
             <div class="banner-container">
                 <div class="banner-track p-v-20 flex">
@@ -699,9 +686,7 @@
                 </div>
             </div>
             <div class="footer-container">
-
                 <div class="footer-links">
-
                     <div class="footer-logo">
                         <p class="text-default">Fyrre Magazine</p>
                     </div>
@@ -723,12 +708,9 @@
                             <a href="#">Changelog</a>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="footer-copyright ">
                     <p>© Made by Pawel Gola - Powered by Webflow</p>
-
                     <div class=" flex item-center social-icons-footer">
                         <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
@@ -737,7 +719,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </footer>
 </body>
