--- a/podcast.html
+++ b/podcast.html
@@ -50,7 +50,7 @@
                             <p class="poster-header-30">Fyrre</p>
                             <p class="poster-subtitle-15">magazin</p>
                         </div>
-                        <div class=" pod-cont absolute flex pod-cont-gap">
+                        <div class=" pod-cont absolute flex pod-cont-gap p-h-20 p-b-14">
                             <div class="flex pod-subtitle">
                                 <span class="poster-subtitle-15">Ep </span>
                                 <span class=" poster-subtitle-15">05</span>
@@ -85,7 +85,7 @@
                             <p class="poster-header-30">Fyrre</p>
                             <p class="poster-subtitle-15">magazin</p>
                         </div>
-                        <div class=" pod-cont absolute flex pod-cont-gap">
+                        <div class=" pod-cont absolute flex pod-cont-gap p-h-20 p-b-14">
                             <div class="flex pod-subtitle">
                                 <span class="poster-subtitle-15">Ep </span>
                                 <span class=" poster-subtitle-15">05</span>
@@ -120,7 +120,7 @@
                             <p class="poster-header-30">Fyrre</p>
                             <p class="poster-subtitle-15">magazin</p>
                         </div>
-                        <div class=" pod-cont absolute flex pod-cont-gap">
+                        <div class=" pod-cont absolute flex pod-cont-gap p-h-20 p-b-14">
                             <div class="flex pod-subtitle">
                                 <span class="poster-subtitle-15">Ep </span>
                                 <span class=" poster-subtitle-15">05</span>
@@ -153,7 +153,7 @@
                             <p class="poster-header-30">Fyrre</p>
                             <p class="poster-subtitle-15">magazin</p>
                         </div>
-                        <div class=" pod-cont absolute flex pod-cont-gap">
+                        <div class=" pod-cont absolute flex pod-cont-gap ">
                             <div class="flex pod-subtitle">
                                 <span class="poster-subtitle-15">Ep </span>
                                 <span class=" poster-subtitle-15">05</span>
@@ -189,7 +189,7 @@
                             <p class="poster-header-30">Fyrre</p>
                             <p class="poster-subtitle-15">magazin</p>
                         </div>
-                        <div class=" pod-cont absolute flex pod-cont-gap">
+                        <div class=" pod-cont absolute flex pod-cont-gap p-h-20 p-b-14">
                             <div class="flex pod-subtitle">
                                 <span class="poster-subtitle-15">Ep </span>
                                 <span class=" poster-subtitle-15">05</span>
