--- a/index.html
+++ b/index.html
@@ -37,7 +37,37 @@
             </nav>
         </div>
     </header>
+    <header class="sec-header container">
+        <div class="head flex item-center justify-between p-v-20">
+            <a class="text-default" href="index.html">Fyrre Magazine</a>
+            <button class="mobile-nav-btn"><i class="fa-solid fa-bars"></i></button>
+        </div>
+        <div class="mobile-menu-box">
+            <button class="mobile-menu-close">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+            <div class="mobile-menu-nav">
+                            <a class="text-default" href="index.html">Fyrre Magazine</a>
 
+                <nav>
+                    <ul class=" nav-bar text-medium flex item-center justify-between flex-col ">
+                        <li><a href="magazine.html">Magazine</a></li>
+                        <li><a href="authors.html">Authors</a></li>
+                        <li><a href="podcast.html">Podcast</a></li>
+                        <li><img src="img/h-line.svg" class="m-b-8"></li>
+                        <li>
+                            <div class="social-icons flex item-center ">
+                                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="https://x.com/" target="_blank"><i class="fa-solid fa-wifi"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     <section class="container ">
         <h1 class="largtext hero-title">art & Life</h1>
         <div class="banner">
@@ -74,37 +104,37 @@
             </div>
         </div>
         <div class="cover-text flex flex-col item-center">
-              <div class="site-header-cont flex item-center m-t-64">
-            <h2 class="heading-larg-text">Don’t close your eyes</h2>
-            <div class="site-header-article p-b-24 p-l-48 flex flex-col">
-                <p class="heading-pharagrap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore
-                    et dolore magna aliqua. Egestas dui id ornare arcu odio ut sem. Cras ornare arcu dui vivamus arcu
-                    felis bibendum ut. Porttitor leo a diam.</p>
-                <div class="article-details flex item-center justify-between">
-                    <div class="details flex item-center">
-                        <div class="flex meta-item item-center ">
-                            <span class="detail-bold-text">Text </span>
-                            <span class="detail-regular-text">Jakob Gronberg</span>
+            <div class="site-header-cont flex item-center m-t-64">
+                <h2 class="heading-larg-text">Don’t close your eyes</h2>
+                <div class="site-header-article p-b-24 p-l-48 flex flex-col">
+                    <p class="heading-pharagrap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore
+                        et dolore magna aliqua. Egestas dui id ornare arcu odio ut sem. Cras ornare arcu dui vivamus
+                        arcu
+                        felis bibendum ut. Porttitor leo a diam.</p>
+                    <div class="article-details flex item-center justify-between">
+                        <div class="details flex item-center">
+                            <div class="flex meta-item item-center ">
+                                <span class="detail-bold-text">Text </span>
+                                <span class="detail-regular-text">Jakob Gronberg</span>
+                            </div>
+                            <div class="flex meta-item item-center ">
+                                <span class="detail-bold-text">Date </span>
+                                <span class="detail-regular-text">16. March 2022</span>
+                            </div>
+                            <div class="flex meta-item item-center ">
+                                <span class="detail-bold-text">Duration </span>
+                                <span class="detail-regular-text">1 Min</span>
+                            </div>
                         </div>
-                        <div class="flex meta-item item-center ">
-                            <span class="detail-bold-text">Date </span>
-                            <span class="detail-regular-text">16. March 2022</span>
-                        </div>
-                        <div class="flex meta-item item-center ">
-                            <span class="detail-bold-text">Duration </span>
-                            <span class="detail-regular-text">1 Min</span>
-                        </div>
+                        <a class="btn-primary ">Label</a>
                     </div>
-                    <a class="btn-primary ">Label</a>
                 </div>
             </div>
+            <div class="m-t-48  cover">
+                <img src="img/homepage-cover.jpg" class="ratio-img">
+            </div>
         </div>
-        <div class="m-t-48  cover">
-            <img src="img/homepage-cover.jpg" class="ratio-img">
-        </div>
-        </div>
-      
     </section>
     <section class="container  artic">
         <div class="main-content-cont  ">
@@ -403,7 +433,6 @@
         <a href="magazine.html" class="flex items-center next-page all-article text-default1 xl:m-t-35">
             all articles <i class="fa-solid fa-arrow-right"></i>
         </a>
-
     </section>
     <section class=" container">
         <div class="podcast-section  p-t-48 p-b-64">
@@ -431,8 +460,8 @@
                                 <img src="img//arrow.svg" class="pod-arrow ">
                             </div>
                         </div>
-                        <div class="podcast-detail card-article-headline">
-                            <h2>The Problem of today’s cultural development</h2>
+                        <div class="podcast-detail ">
+                            <h2 class="card-article-headline  headline-2">The Problem of today’s cultural development</h2>
                             <div class="details pod-det">
                                 <div class=" meta-item ">
                                     <span class="detail-bold-text">Date </span>
@@ -464,8 +493,8 @@
                                 <img src="img//arrow.svg" class="pod-arrow ">
                             </div>
                         </div>
-                        <div class="podcast-detail card-article-headline">
-                            <h2>The hidden messages of Jack Nielson</h2>
+                        <div class="podcast-detail ">
+                            <h2 class="card-article-headline  headline-2">The hidden messages of Jack Nielson</h2>
                             <div class="details pod-det">
                                 <div class=" meta-item ">
                                     <span class="detail-bold-text">Date </span>
@@ -497,8 +526,8 @@
                                 <img src="img//arrow.svg" class="pod-arrow ">
                             </div>
                         </div>
-                        <div class="podcast-detail card-article-headline">
-                            <h2>The Problem of today’s cultural development</h2>
+                        <div class="podcast-detail ">
+                            <h2 class="card-article-headline headline-2">The Problem of today’s cultural development</h2>
                             <div class="details pod-det">
                                 <div class=" meta-item ">
                                     <span class="detail-bold-text">Date </span>
@@ -720,7 +749,6 @@
                     <div class="footer-logo">
                         <p class="text-default">Fyrre Magazine</p>
                     </div>
-
                     <div class="footer-row">
                         <div class="footer-col heading-pharagrap">
                             <a href="#">Art</a>
@@ -738,9 +766,7 @@
                             <a href="#">Changelog</a>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="footer-copyright ">
                     <p>© Made by Pawel Gola - Powered by Webflow</p>
 
@@ -752,11 +778,9 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </footer>
-
-
+    <script src="js/mobile-nav.js"></script>
 </body>
 
 </html>
