--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     </section>
     <section class=" container">
         <div class="podcast-section  p-t-48 p-b-64">
-            <div class="pocast-header flex item-center">
+            <div class="pocast-header flex item-center justify-between">
                 <h1 href="#" class="heading-larg-text">Podcast</h1>
                 <a href="podcast.html" class="flex item-center next-page text-default1"> All Episodes <i
                         class="fa-solid fa-arrow-right"></i></a>
@@ -544,7 +544,7 @@
             </div>
         </div>
         <div class="podcast-section  p-t-48 p-b-64">
-            <div class="pocast-header flex item-center">
+            <div class="pocast-header flex item-center justify-between">
                 <h1 class="heading-larg-text">Authors</h1>
                 <a href="authors.html" class="flex item-center next-page text-default1"> All Authors <i
                         class="fa-solid fa-arrow-right"></i></a>
