--- a/magazine.html
+++ b/magazine.html
@@ -36,6 +36,37 @@
             </nav>
         </div>
     </header>
+        <header class="sec-header container">
+        <div class="head flex item-center justify-between p-v-20">
+            <a class="text-default" href="index.html">Fyrre Magazine</a>
+            <button class="mobile-nav-btn"><i class="fa-solid fa-bars"></i></button>
+        </div>
+        <div class="mobile-menu-box">
+            <button class="mobile-menu-close">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+            <div class="mobile-menu-nav">
+                            <a class="text-default" href="index.html">Fyrre Magazine</a>
+
+                <nav>
+                    <ul class=" nav-bar text-medium flex item-center justify-between flex-col ">
+                        <li><a href="magazine.html">Magazine</a></li>
+                        <li><a href="authors.html">Authors</a></li>
+                        <li><a href="podcast.html">Podcast</a></li>
+                        <li><img src="img/h-line.svg" class="m-b-8"></li>
+                        <li>
+                            <div class="social-icons flex item-center ">
+                                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="https://x.com/" target="_blank"><i class="fa-solid fa-wifi"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     <section class="container hero">
         <h1 class="largtext hero-title">Magazine</h1>
         <div class="magazine-categories flex item-center">
@@ -721,6 +752,7 @@
             </div>
         </div>
     </footer>
+     <script src="js/mobile-nav.js"></script>
 </body>
 
 </html>
