--- a/article-detail.html
+++ b/article-detail.html
@@ -36,8 +36,39 @@
             </nav>
         </div>
     </header>
+      <header class="sec-header container">
+        <div class="head flex item-center justify-between p-v-20">
+            <a class="text-default" href="index.html">Fyrre Magazine</a>
+            <button class="mobile-nav-btn"><i class="fa-solid fa-bars"></i></button>
+        </div>
+        <div class="mobile-menu-box">
+            <button class="mobile-menu-close">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+            <div class="mobile-menu-nav">
+                            <a class="text-default" href="index.html">Fyrre Magazine</a>
+
+                <nav>
+                    <ul class=" nav-bar text-medium flex item-center justify-between flex-col ">
+                        <li><a href="magazine.html">Magazine</a></li>
+                        <li><a href="authors.html">Authors</a></li>
+                        <li><a href="podcast.html">Podcast</a></li>
+                        <li><img src="img/h-line.svg" class="m-b-8"></li>
+                        <li>
+                            <div class="social-icons flex item-center ">
+                                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="https://x.com/" target="_blank"><i class="fa-solid fa-wifi"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     <section class="magazine-detail-body container  p-t-32 p-b-96">
-        <div class="pocast-header flex item-center">
+        <div class="pocast-header-det flex item-center">
             <a href="magazine.html" class="flex item-center next-page text-default1"> <i
                     class="fa-solid fa-arrow-left"></i>Go back</a>
             <a href="#" class="detail-page-header">Magazine</a>
@@ -79,7 +110,7 @@
         </div>
     </section>
     <article class="container2 detail-article flex ">
-        <div class="article-aside-cont">
+        <div class="article-aside-cont flex flex-col">
             <a class="author-info flex item-center p-b-32">
                 <div class="author-img">
                     <img src="img/Jakob Grønberg.jpg" class="ratio-img" alt="Author">
@@ -252,7 +283,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="magazin-list-item">
+                <a href="#" class=" magazin-list-broder magazin-list-item ">
                     <div class="item-header">
                         <p class="add-date detail-regular-text">16. March 2022</p>
                         <span class="btn-primary"> squlptures</span>
@@ -401,6 +432,8 @@
 
         </div>
     </footer>
+         <script src="js/mobile-nav.js"></script>
+
 </body>
 
 </html>
